[gd_scene load_steps=2 format=3 uid="uid://dk0ggx61bg30i"]

[ext_resource type="Script" path="res://controleur/menu_principal.gd" id="1_tq7sb"]

[node name="Menu Principal" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tq7sb")

[node name="Titre" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -108.0
offset_right = 108.0
offset_bottom = 69.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Stickspin"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -52.0
offset_right = 92.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2

[node name="Jouer" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Jouer"
flat = true

[node name="Classement" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Classement"
flat = true

[node name="Quitter" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Quitter
"
flat = true

[connection signal="pressed" from="VBoxContainer/Jouer" to="." method="_on_commencer_pressed"]
[connection signal="pressed" from="VBoxContainer/Classement" to="." method="_on_classement_pressed"]
[connection signal="pressed" from="VBoxContainer/Quitter" to="." method="_on_quitter_pressed"]
